# dom-scrapping-tutorial

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.service.yml  entry_script.sh  lambda.local.Dockerfile  launch_driver.sh  pyproject.toml
dom_scrapping_tutorial/: __init__.py  app.py  config.py  constant.py  driver.py  example.py  handler.py  main.py
